working prototype ready,needs lots of fixes

--- a/scraper-python/randomFacts/templates/randomFactsFrontend.html
+++ b/scraper-python/randomFacts/templates/randomFactsFrontend.html
@@ -4,13 +4,12 @@
      <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>unusual wikipedia articles</title>
-    <link  rel="stylesheet" href="../static/style.css" media="screen"/>
-    <link  rel="stylesheet" href="{{url_for('static',filename='style.css')}}" media="screen"/>
-<link  rel="stylesheet" href="../static/style.css" media="screen"/>
+     <link  rel="stylesheet" href="{{url_for('static',filename='style.css')}}" media="screen"/>
+
 </head>
 <body>
     <h2 class="titletext">get a random fact!</h2>
-     <button class="button">press me</button>
+     <button class="button" onclick="getfacts()">press me</button>
      <div class="facts-container">
         <div class="title-container">
          title
@@ -21,9 +20,29 @@
 
 
 <script>
-    const title=document.querySelector('title-container').innerHTML;
-    title=m;
-    
+    const title=document.querySelector('.title-container');
+    const info=document.querySelector('.info-container');
+    const button = document.querySelector('.button');
+
+   function getfacts()
+{
+
+   fetch('/get-fact')
+   .then(function(response){
+      return response.json();
+   })
+   .then(function(data){
+      title.textContent=data.title;
+      info.textContent=data.info
+   })
+   .catch(function(error) {
+            console.error('Error:', error);
+            button.textContent = "Error! Try Again";
+        });
+
+
+
+}    
 </script>
    
 </body>
